src/test/deca/syntax/invalid/improvided/commet_not_ended.deca
// Description
// 	Commentaire non fermée
// Resultats:
// 	Ligne 5
/*sana
